src/test/ui/async-await/multiple-lifetimes/ret-ref.stderr
warning: lifetime parameter `'b` never used
  --> $DIR/ret-ref.rs:7:39
   |
LL | async fn multiple_named_lifetimes<'a, 'b>(a: &'a u8, _: &'b u8) -> &'a u8 {
   |                                       ^^
   |
   = note: `#[warn(unused_lifetimes)]` on by default

error[E0506]: cannot assign to `a` because it is borrowed
  --> $DIR/ret-ref.rs:16:5
   |
LL |     let future = multiple_named_lifetimes(&a, &b);
   |                                           -- borrow of `a` occurs here
LL |     a += 1;
   |     ^^^^^^ assignment to borrowed `a` occurs here
LL |     b += 1;
LL |     let p = future.await;
   |             ------ borrow later used here

error[E0506]: cannot assign to `b` because it is borrowed
  --> $DIR/ret-ref.rs:17:5
   |
LL |     let future = multiple_named_lifetimes(&a, &b);
   |                                               -- borrow of `b` occurs here
LL |     a += 1;
LL |     b += 1;
   |     ^^^^^^ assignment to borrowed `b` occurs here
LL |     let p = future.await;
   |             ------ borrow later used here

error[E0506]: cannot assign to `a` because it is borrowed
  --> $DIR/ret-ref.rs:28:5
   |
LL |     let future = multiple_named_lifetimes(&a, &b);
   |                                           -- borrow of `a` occurs here
LL |     let p = future.await;
LL |     a += 1;
   |     ^^^^^^ assignment to borrowed `a` occurs here
LL |     b += 1;
LL |     drop(p);
   |          - borrow later used here

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0506`.
